--- a/ShipForm.html
+++ b/ShipForm.html
@@ -16,7 +16,7 @@
 <label>UPS: </label><input type="radio" id="UPS" name="ShipMethod">&nbsp; &nbsp; &nbsp; &nbsp;
 <label>FedEx: </label><input type="radio" id="FedEx" name="ShipMethod">&nbsp; &nbsp; &nbsp; &nbsp;
 <label>Ground (FREE): </label><input type="radio" id="Ground" name="ShipMethod"><br /><br />
-<label>Price: </label><input type="text" id="Width" size="5" name="Width"><br /><br />
+<label>Price: </label><input readonly type="text" id="price" size="5" name="price"><br /><br />
 <input type="submit" value="Submit">
 </form>
 <script src="script.js"></script>
