--- a/ShipForm.html
+++ b/ShipForm.html
@@ -1,24 +1,39 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html>
+
 <head>
-<title>Shipping Calc</title>
-<script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
+  <title>Shipping Calc</title>
+  <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
+    crossorigin="anonymous"></script>
 </head>
+
 <body>
-<h1>Shipping Calculator</h1>
-<form style="line-height:1.5em" name="ship" Method="post" action="" id="main_form">
-<label>From:&nbsp; &nbsp; </label><input type="text" id="ShipFrom" size="50" name="ShipFrom"><br />
-<label>To:&nbsp; &nbsp; &nbsp; &nbsp; </label><input type="text" id="ShipTo" size="50" name="ShipTo"><br />
-<label>Weight: </label><input type="text" size="5" id="weight" name="weight"><br />
-<label>Height: </label><input type="text" size="5" id="Height" name="Height"> 
-<label>Length: </label><input type="text" size="5" id="Length" name="Length"> 
-<label>Width: </label><input type="text" id="Width" size="5" name="Width"><br /><br />
-<label>UPS: </label><input type="radio" id="UPS" name="ShipMethod">&nbsp; &nbsp; &nbsp; &nbsp;
-<label>FedEx: </label><input type="radio" id="FedEx" name="ShipMethod">&nbsp; &nbsp; &nbsp; &nbsp;
-<label>Ground (FREE): </label><input type="radio" id="Ground" name="ShipMethod"><br /><br />
-<label>Price: </label><input readonly type="text" id="price" size="5" name="price"><br /><br />
-<input type="submit" value="Submit">
-</form>
-<script src="script.js"></script>
+  <h1>Shipping Calculator</h1>
+  <form style="line-height: 1.5em" name="ship" method="post" action="" id="main_form">
+    <label>From::</label><br />
+    <label>AddressLine:&nbsp;</label><input type="text" id="AddressLine_From" size="25" name="AddressLine_From" />&nbsp;&nbsp;
+    <label>City:&nbsp;</label><input type="text" id="City_From" size="15" name="City_From" />&nbsp;&nbsp;
+    <label>StateProvinceCode:&nbsp;</label><input type="text" id="StateProvinceCode_From" size="5" name="StateProvinceCode_From" />&nbsp;&nbsp;
+    <label>PostalCode:&nbsp;</label><input type="text" id="PostalCode_From" size="5" name="PostalCode_From" /><br /><br />
+    
+    <label>To::</label><br />
+    <label>AddressLine:&nbsp;</label><input type="text" id="AddressLine_To" size="25" name="AddressLine_To" />&nbsp;&nbsp;
+    <label>City:&nbsp;</label><input type="text" id="City_To" size="15" name="City_To" />&nbsp;&nbsp;
+    <label>StateProvinceCode:&nbsp;</label><input type="text" id="StateProvinceCode_To" size="5" name="StateProvinceCode_To" />&nbsp;&nbsp;
+    <label>PostalCode:&nbsp;</label><input type="text" id="PostalCode_To" size="5" name="PostalCode_To" /><br /><br />
+    
+
+    <label>Weight: </label><input type="text" size="5" id="weight" name="weight" />
+    <label>Height: </label><input type="text" size="5" id="Height" name="Height" />
+    <label>Length: </label><input type="text" size="5" id="Length" name="Length" />
+    <label>Width: </label><input type="text" id="Width" size="5" name="Width" /><br /><br />
+    <label>UPS: </label><input type="radio" id="UPS" name="ShipMethod" />&nbsp;&nbsp;
+    &nbsp; <label>FedEx: </label><input type="radio" id="FedEx" name="ShipMethod" />&nbsp;&nbsp;
+    &nbsp; <label>Ground (FREE): </label><input type="radio" id="Ground" name="ShipMethod" /><br /><br />
+    <label>Price: </label><input readonly type="text" id="price" size="5" name="price" /><br /><br />
+    <input type="submit" value="Submit" />
+  </form>
+  <script src="script.js"></script>
 </body>
+
 </html>
