update fedex to provide several choices

--- a/ShipForm.html
+++ b/ShipForm.html
@@ -27,9 +27,18 @@
     <label>Height: </label><input type="text" size="5" id="Height" name="Height" />
     <label>Length: </label><input type="text" size="5" id="Length" name="Length" />
     <label>Width: </label><input type="text" id="Width" size="5" name="Width" /><br /><br />
-    <label>UPS: </label><input type="radio" id="UPS" name="ShipMethod" />&nbsp;&nbsp;
+    <label>UPS: </label><input type="radio" id="UPS" name="ShipMethod" checked />&nbsp;&nbsp;
     &nbsp; <label>FedEx: </label><input type="radio" id="FedEx" name="ShipMethod" />&nbsp;&nbsp;
     &nbsp; <label>Ground (FREE): </label><input type="radio" id="Ground" name="ShipMethod" /><br /><br />
+    <div id="service_method_wrapper" style="display: none;">
+      <label>FedEx First Overnight</label><input type="radio" id="fedex_fo" name="fedex_service_type" checked><br />
+      <label>FedEx Priority Overnight</label><input type="radio" id="fedex_fpo" name="fedex_service_type"><br />
+      <label>FedEx Standard Overnight</label><input type="radio" id="fedex_fso" name="fedex_service_type"><br />
+      <label>FedEx 2Day AM</label><input type="radio" id="fedex_f2a" name="fedex_service_type"><br />
+      <label>FedEx 2Day</label><input type="radio" id="fedex_f2" name="fedex_service_type"><br />
+      <label>FedEx Express Saver</label><input type="radio" id="fedex_fes" name="fedex_service_type"><br />
+      <label>FedEx Ground</label><input type="radio" id="fedex_fg" name="fedex_service_type"><br />
+    </div>
     <label>Price: </label><input readonly type="text" id="price" size="5" name="price" /><br /><br />
     <input type="submit" value="Submit" />
   </form>
