--- a/ShipForm.html
+++ b/ShipForm.html
@@ -54,6 +54,7 @@
     </select>
     <br />
     <label>Price: </label><input readonly type="text" id="price" size="5" name="price" /><br /><br />
+    <label id="error_line" style="display: none; color: red;">Error</label><br />
     <input type="submit" value="Submit" />
   </form>
   <script src="script.js"></script>
