update fedex service type

--- a/ShipForm.html
+++ b/ShipForm.html
@@ -45,7 +45,7 @@
     </select>
     <select id="fedex_service_method_wrapper" style="display: none">
       <option value="FEDEX_GROUND">FedEx Ground</option>
-      <option value="EXPRESS_SAVER">FedEx Express Saver</option>
+      <option value="FEDEX_EXPRESS_SAVER">FedEx Express Saver</option>
       <option value="FEDEX_2_DAY">FedEx 2Day</option>
       <option value="FEDEX_2_DAY_AM">FedEx 2Day AM</option>
       <option value="STANDARD_OVERNIGHT">FedEx Standard Overnight</option>
